[package]
name = "starknet-sequencer"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
clap = { version = "4.0.5", features = ["derive", "env"] }
tendermint-abci = "0.25.0"
tendermint-proto = { version = "0.25.0", default-features = false }
tendermint-rpc = { version = "0.25.0", features = ["http-client"] }
tracing = "0.1"
tracing-subscriber = {version = "0.3", features = ["env-filter", "fmt", "std"]}
tokio = { version = "1.15.0", features = ["full"] }
