[package]
name = "starknet-abci"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
abci-rs = { version = "0.11.3", features = ["async-api" ] }
async-trait = "0.1.56"
eyre = "0.6.8"
hex = "0.4.3"
serde_json = "1.0.82"
tendermint-abci = { version = "0.23.7", features = ["client"] }
tendermint-proto = "0.23.7"
tokio = { version = "1.19.2", features = ["macros"] }
clap = { version = "3.0.10", features = [
    "derive",
    "env",
    "unicode",
    "wrap_help",
] }
clap_complete = "3.0.4"
serde = { version = "1.0.138", features = ["derive"] }
reqwest = "0.11.11"
sha2 = "0.10.6"
tracing = "0.1.35"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter", "fmt"] }
tracing-error = "0.2.0"
yansi = "0.5.1"
uuid = { version = "1.2.1", features = ["v4"] }
anyhow = "1.0.66"
once_cell = "1.13.0"
bincode = "1.3.3"
starknet-rs = { git = "https://github.com/lambdaclass/starknet_in_rust", branch= "publish-structs" }
# This was copied from starkent_in_rust/Cargo.toml as it seems it is missing an export for it
felt = { git = "https://github.com/lambdaclass/cairo-rs", package = "cairo-felt", rev = "8dba86dbec935fa04a255e2edf3d5d184950fa22" }
